--- a/MvcStock/MvcStock.csproj
+++ b/MvcStock/MvcStock.csproj
@@ -239,6 +239,7 @@
     <Content Include="Views\Category\Index.cshtml" />
     <Content Include="Views\Product\Index.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
+    <Content Include="Views\Category\YeniKategori.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
