--- a/MvcStock/MvcStock.csproj
+++ b/MvcStock/MvcStock.csproj
@@ -243,6 +243,7 @@
     <Content Include="Views\Customer\YeniMusteri.cshtml" />
     <Content Include="Views\Product\UrunEkle.cshtml" />
     <Content Include="Views\Category\KategoriGetir.cshtml" />
+    <Content Include="Views\Customer\MusteriGetir.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
